# siren

./: README.md  pyproject.toml  requirements_dev.txt
src/siren/: __init__.py  __init__.pyi  __main__.py  analysis.py  core.py
test/: test_analysis.py  test_core.py  test_test.py
